Print Message, Instruction Diagram, File Type Error
- Tweaked main diagram
- Added code to spit error and reset when user tries to add non image
file
- Added a message to print

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<div id="working_msg">
 		<p>working...</p>
 	</div>
+	<div id="print_msg">
+		<p>Print this page: Ctrl+P or Cmd+P</p>
+	</div>
 	<div id="image_out">
 		<div class="placeholder">
 			<div class="placeholder-piece">
