--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="shell">
 	<div id="drop_area_box">
-		<p>Drag & Drop your avatar file here</p>
+		<p>Drag & Drop your avatar file here from desktop</p>
 	</div>
 	<div id="working_msg">
 		<p>working...</p>
