print message tweak

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p>working...</p>
 	</div>
 	<div id="print_msg">
-		<p>Print this page: Ctrl+P or Cmd+P</p>
+		<p>Print this A4: Ctrl+P or Cmd+P</p>
 	</div>
 	<div id="image_out">
 		<div class="placeholder">
