--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Team Avatar Builder</title>
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <div class="shell">
+	<div class="intro">
+		<h1>Team Avatar Builder</h1>
+	</div>
 	<div id="drop_area_box">
 		<p>Drag & Drop your avatar file here from desktop</p>
 	</div>
@@ -22,6 +25,14 @@
 				<div class="placeholder-img"></div>
 				<div class="placeholder-label"></div>
 			</div>
+		</div>
+	</div>
+	<div class="instructions">
+		<div class="instruction square-img">
+			<div class="diagram"></div>
+		</div>
+		<div class="instruction filename">
+			<div class="diagram"></div>
 		</div>
 	</div>
 </div>
