--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<div class="instruction filename">
 			<div class="diagram"></div>
 		</div>
+		<div class="github">
+			<a href="https://github.com/marufm/Team-Avatar-Builder">See on GitHub</a>
+		</div>
 	</div>
 </div>
 
